<resources>
    <string name="app_name">Extranet</string>
    <string name="login_text">Trip Netra Extranet App has been designed \n exclusively for our Hotel Partners \n\n\n
    To book a hotel,cab or holiday please visit our Website </string>
    <string name="address_string">202,2nd Floor\nEcco Greens Park\nUpadhyaya Nagar\nAkkarampalli\nTirupati - 517501</string>
    <string name="confirmed">CONFIRMED</string>
    <string name="cancelled">CANCELLED</string>
    <string name="trans">No Transfer</string>
    <string name="refer">No Reference Id</string>
    <string name="process">PROCESSING</string>
    <string name="paid">PAID</string>
    <string name="password">Password</string>
    <string name="logoimage">logoimage</string>
    <string name="supplier_id">Supplier Id</string>
    <string name="tripnetra_com">Tripnetra.com</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="voucher_tax_invoice">VOUCHER / TAX INVOICE</string>
    <string name="invoice_no">Invoice No :</string>
    <string name="invoice_date">Invoice Date :</string>
    <string name="dear_text">Dear Business Partner,\n\t\t\t\tWe thank you for your continued support to Tripnetra.\n
        Please confirm the following booking that is done as per the allocation assigned to us.</string>
    <string name="name_of_hotel">Hotel Name</string>
    <string name="name_of_guest">Guest Name</string>
    <string name="number_of_guests">Number Of Guests</string>
    <string name="number_of_extra_beds">Number Of Extra Beds</string>
    <string name="number_of_rooms">Number Of Rooms</string>
    <string name="room_type">Room Type</string>
    <string name="number_of_nights">Number Of Nights</string>
    <string name="checkout_date">Check-Out Date</string>
    <string name="expected_check_in_time">Expected Check-In Time</string>
    <string name="checkin_date">Check-In Date</string>
    <string name="booking_date">Booking Date</string>
    <string name="phone_number">Mobile Number</string>
    <string name="payment_breakup">Payment Breakup</string>
    <string name="total_room_charges">Total Room Charges</string>
    <string name="tripnetra_gst_18">Tripnetra GST @ 18%(-)</string>
    <string name="igst_cgst_amp_sgst"><![CDATA[( IGST/CGST&SGST )]]></string>
    <string name="hotel_gst">Hotel GST(+)</string>
    <string name="pan">PAN :</string>
    <string name="aafcn3648b">AAFCN3648B</string>
    <string name="aafcn3648b1zn">36AAFCN3648B1ZN</string>
    <string name="gstin">GSTIN :</string>
    <string name="hsn_sac">HSN/SAC :</string>
    <string name="_998552">998552</string>
    <string name="u72900tg2016ptc111759">U72900TG2016PTC111759</string>
    <string name="cin">CIN :</string>
    <string name="note_tax">Tax will be calculated as applicable and will be settled in following weekend.</string>
    <string name="price_includes_gst_if">(Price Includes GST if applicable)</string>
    <string name="price_includes_gst">Price Includes GST</string>
    <string name="booking_id">Booking ID</string>
    <string name="payment_voucher">Payment Voucher</string>
    <string name="total_amount">TOTAL AMOUNT</string>
    <string name="reference_id">REFERENCE ID</string>
    <string name="transaction_type">TRANSACTION TYPE</string>
    <string name="remarks">REMARKS</string>
    <string name="payment">Payment</string>
    <string name="select_hotel">Select Hotel</string>
    <string name="contact1">+91–8500898000</string>
    <string name="contact2">+91–8772500800</string>
    <string name="info_tripnetra_com">info@tripnetra.com</string>
    <string name="mailimage">mailimage</string>
    <string name="tripnetra">Tripnetra</string>
    <string name="mobile">mobile</string>
    <string name="sign_in">Sign In</string>
    <string name="booking_reports">Booking Reports</string>
    <string name="availability_amp_pricing"><![CDATA[Availability & Pricing]]></string>
    <string name="pricing_reports">Pricing Reports</string>
    <string name="tripnetra_commision">TripNetra Commission(-)  :</string>
    <string name="complimentay_rooms_charge">Complimentay Rooms Charge(-)   :</string>
    <string name="tripnetra_payable_to_hotel">Tripnetra Payable to Hotel  :</string>
    <string name="check_out">Check-Out</string>
    <string name="check_in">Check-In</string>
    <string name="manage">Manage</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="available_rooms">Available Rooms</string>
    <string name="room_price">Room Price</string>
    <string name="block_inventory">Block Inventory</string>
    <string name="save">Save</string>
    <string name="comp">COMP</string>
    <string name="all">All</string>
    <string name="upcoming">Upcoming</string>
    <string name="loading">Loading…</string>
    <string name="error_occur">Error Occurred Try Again</string>
    <string name="get_reports">Get Reports</string>
    <string name="note">Note :</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="please_confirm_book">Please confirm the following booking that is done as per the allocation assaigned to us</string>
    <string name="booking_details">Booking Details</string>
    <string name="booking_date_amp_time"><![CDATA[Booking Date & Time]]></string>
    <string name="room_details">Room Details</string>
    <string name="payment_details">Payment Details</string>
    <string name="tripnetra_gst_info">TripNetra GST Info</string>
    <string name="change_password">Change Password</string>

    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="status">Status</string>
    <string name="contact_us">Contact Us</string>
    <string name="processing">Processing</string>
    <string name="hotel_details">Hotel Details</string>
    <string name="extra_beds">Extra Beds</string>
    <string name="price_details">Price Details</string>
    <string name="transaction_date">TRANSACTION DATE</string>
    <string name="no_bookings_found">No Bookings Found</string>
    <string name="no_payments_found">No Payments Found</string>
    <string name="welcome">Welcome</string>
    <string name="mangae_your_inventory">Mangae Your Inventory and Do Much more</string>
    <string name="default_notification_channel_id">TRIP_EXTRANET_NOTID_46567</string>
    <string name="cancel_bbook">Cancel Booking</string>

</resources>
