<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#fafafa"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/logoimage"/>

    <TextView
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/voucher_tax_invoice"/>

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="5dp"
        android:textStyle="bold"
        android:layout_toStartOf="@+id/invoicenoTV"
        android:text="@string/invoice_no"
        android:id="@+id/textView15"/>

    <TextView
        android:id="@+id/invoicenoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="5dp"/>

    <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView15"
        android:layout_below="@+id/textView15"
        android:layout_marginTop="10dp"
        android:text="@string/invoice_date"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/invoicedateTV"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/invoicenoTV"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="5dp"
        android:gravity="end"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:text="@string/dear_text"
        android:id="@+id/textView16"/>

    <TextView
        android:id="@+id/hotgstnoTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView16"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

</RelativeLayout>