<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:screenOrientation="portrait"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:background="@drawable/back">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:background="@drawable/logo"
        android:layout_margin="25dp"
        android:contentDescription="@string/logoimage"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/supidTIL"
        android:layout_marginBottom="5dp" >

        <EditText
            android:id="@+id/suppET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/supplier_id"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="#fff" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/passwdTIL"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#ffffff"
        android:layout_marginBottom="30dp" >

        <EditText
            android:id="@+id/pwdET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:imeActionLabel="Sign In"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:selectAllOnFocus="false"
            android:textColor="@color/white"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signinbutton"
        style="?android:textAppearanceSmall"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ffb400"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:onClick="verifydata"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="8"
        android:text="@string/login_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/Tripnetra.com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/tripnetra_com"
        android:textColorLink="@color/yellow"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end">

        <Button
            android:id="@+id/privacybutton"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:onClick="privacypol"
            android:text="@string/privacy_policy"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>
