<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/phone"
            android:layout_gravity="center"
            android:contentDescription="@string/phone_number"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact1"
                android:textSize="22sp"
                android:autoLink="phone"
                android:layout_gravity="start"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textColorLink="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact2"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:autoLink="phone"
                android:layout_gravity="start"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textColorLink="@color/black"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/email"
            android:layout_gravity="center"
            android:contentDescription="@string/mailimage"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/info_tripnetra_com"
            android:gravity="start"
            android:textSize="23sp"
            android:autoLink="email"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:textColorLink="@color/black"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/locmark"
            android:layout_marginTop="30dp"
            android:id="@+id/imageView"
            android:contentDescription="@string/mailimage"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tripnetra"
                android:layout_gravity="start"
                android:layout_marginLeft="15dp"
                android:textIsSelectable="true"
                android:layout_marginStart="15dp"
                android:textSize="25sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_string"
                android:layout_gravity="start"
                android:textIsSelectable="true"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>