<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluebg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="45dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="bookinrep"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/booking_reports"
                android:src="@drawable/booking" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/booking_reports"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="inventory"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/booking_reports"
                android:src="@drawable/availability" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/availability_amp_pricing"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="pricingrep"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/booking_reports"
                android:src="@drawable/priceing" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/pricing_reports"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:background="@drawable/lineborder_white"
        android:layout_height="40dp"
        android:onClick="conatctmthd"
        android:text="@string/contact_us"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:layout_gravity="bottom|end"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:background="@drawable/lineborder_white"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:onClick="changepass"
        android:layout_gravity="bottom|start"
        android:layout_margin="5dp"/>

</FrameLayout>
