<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".payments.Payment_Main_Act"
    android:background="@drawable/bluebg"
    android:screenOrientation="portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="107dp"
        android:orientation="horizontal"
        android:id="@+id/relativeLayout2"
        android:layout_marginTop="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/from_date"
            android:textSize="15sp" />

        <Button
            android:id="@+id/frombtn"
            android:layout_width="150dp"
            android:layout_height="85dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/border"
            android:onClick="stdate"
            android:text="DD/MM\nYYYY"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/to_date"
            android:textSize="15sp" />

        <Button
            android:id="@+id/tobtn"
            android:layout_width="150dp"
            android:layout_height="85dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/border"
            android:onClick="eddate"
            android:text="DD/MM\nYYYY"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/blocksubmit"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:background="@drawable/border_two"
        android:text="@string/get_reports"
        android:onClick="verifydata"
        android:textColor="@android:color/white"
        android:layout_below="@+id/relativeLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp" />

</RelativeLayout>


